--- a/app/views/app-vistaOrdenCInd.html
+++ b/app/views/app-vistaOrdenCInd.html
@@ -132,7 +132,7 @@ hr{    border-top-color: #455A64}
                   <h6>Subtotal:</h6>
                 </div>
                 <div class="col-sm-6">
-                  <span class="TotAltura">{{subTotalInd}}</span>
+                  <span class="TotAltura">{{subTotalInd | number:2}}</span>
                 </div>
               </div>
               <div class="row">
@@ -140,7 +140,7 @@ hr{    border-top-color: #455A64}
                   <h6>Impuestos:</h6>
                 </div>
                 <div class="col-sm-6">
-                  <span class="TotAltura">{{ordenCompra.amount-subTotalInd}}</span>
+                  <span class="TotAltura">{{ordenCompra.amount-subTotalInd | number:2}}</span>
                 </div>
               </div>
               <div class="row">
@@ -148,7 +148,7 @@ hr{    border-top-color: #455A64}
                   <h6>Total:</h6>
                 </div>
                 <div class="col-sm-6">
-                  <span class="TotAltura">{{ordenCompra.amount}}</span>
+                  <span class="TotAltura">{{ordenCompra.amount | number:2}}</span>
                 </div>
               </div>
             </div>
