--- a/app/views/app-vistaOrdenVInd.html
+++ b/app/views/app-vistaOrdenVInd.html
@@ -145,7 +145,7 @@ hr{    border-top-color: #455A64}
                   <h6>Subtotal:</h6>
                 </div>
                 <div class="col-sm-6">
-                  <span class="TotAltura">{{subTotalInd}}</span>
+                  <span class="TotAltura">{{subTotalInd | number:2}}</span>
                 </div>
               </div>
               <div class="row">
@@ -153,7 +153,7 @@ hr{    border-top-color: #455A64}
                   <h6>Impuestos:</h6>
                 </div>
                 <div class="col-sm-6">
-                  <span class="TotAltura">{{ordenVenta.amount-subTotalInd}}</span>
+                  <span class="TotAltura">{{ordenVenta.amount-subTotalInd | number:2}}</span>
                 </div>
               </div>
               <div class="row">
@@ -161,7 +161,7 @@ hr{    border-top-color: #455A64}
                   <h6>Total:</h6>
                 </div>
                 <div class="col-sm-6">
-                  <span class="TotAltura">{{ordenVenta.amount}}</span>
+                  <span class="TotAltura">{{ordenVenta.amount | number:2}}</span>
                 </div>
               </div>
             </div>
