--- a/app/views/app-vistaProveedor.html
+++ b/app/views/app-vistaProveedor.html
@@ -17,30 +17,23 @@
         </div>
     </div>
   </div>
-    <div class="tab-content" >
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12 ">   
-                    <table class="table table-hover">
-                        <thead>
-                          <tr class="info">
-                            <th>Nombre</th> 
-                            <th>Correo</th> 
-                            <th>Divisa</th> 
-                            <th>P&aacute;gina</th> 
-                            <th>Telefono</th> 
-                          </tr>
-                        </thead>
-                          <tr ng-repeat="supp in suppProxy">
-                              <td><a href="#/app-vistaProveedorInd/{{supp.id}}">{{ supp.name }}</a></td>
-                              <td>{{ supp.email }}</td>
-                              <td>{{supp.currency.shortcut}}</td>
-                              <td>{{ supp.website }}</td>
-                              <td>{{ supp.phone }}</td>
-                          </tr>
-                    </table>  
+  <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-transparent">         
+                <div class="panel-body">
+                    <div class="input mb-xl">
+                        <input type="text" ng-model="filterOptions.filterText" class="form-control" placeholder="Buscar...">
+                    </div>
+
+                    <div class="panel">
+                        <div class="panel-body no-padding">
+                            <div style="height: 512px;" ng-grid="gridOptions"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
+
         </div>
     </div>
+    
 </div>
