--- a/app/views/app-vistaTransferencias.html
+++ b/app/views/app-vistaTransferencias.html
@@ -16,30 +16,22 @@
             </div>
         </div>
     </div>
-    <div class="tab-content" >
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12 ">   
-                    <table class="table table-hover">
-                        <thead>
-                            <tr class="info">
-                                <th>Folio</th> 
-                                <th>Origen</th> 
-                                <th>Destino</th> 
-                                <th>Estado</th> 
-                            </tr>
-                        </thead>
-                        <tbody >
-                            <tr ng-repeat="transf in transferencias">
-                                <td><a href="#/app-vistaTransInd/{{transf.id}}">{{transf.number}}</a></td>
-                                <td>{{transf.origin.warehouse.location_name}} - {{transf.origin.warehouse.name}} - {{transf.origin.name}}</td>
-                                <td>{{transf.destination.warehouse.location_name}} - {{transf.destination.warehouse.name}} - {{transf.destination.name}}</td>
-                                <td>{{transf.status}}</td>
-                            </tr>
-                        </tbody>
-                    </table>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-transparent">         
+                <div class="panel-body">
+                    <div class="input mb-xl">
+                        <input type="text" ng-model="filterOptions.filterText" class="form-control" placeholder="Buscar...">
+                    </div>
+
+                    <div class="panel">
+                        <div class="panel-body no-padding">
+                            <div style="height: 512px;" ng-grid="gridOptions"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
+
         </div>
     </div>
 </div>
