--- a/app/views/app-vistaAlmacen.html
+++ b/app/views/app-vistaAlmacen.html
@@ -10,34 +10,26 @@
         <div class="options">
             <div class="btn-toolbar">
                 <a ng-click="nuevoDivisor()" class="btn btn-default"><i class="fa fa-fw fa-plus"></i>Crear Divisor</a>
-                <a ng-click="cargarOrden()" class="btn btn-default"><i class="fa fa-fw fa-plus"></i>CargarOrden</a>
             </div>
         </div>
     </div>
-    <div class="tab-content" >
-        <div class="container-fluid">
-            <div class="row ">
-                <div class="col-md-12">   
-                    <table class="table table-hover">
-                        <thead>
-                            <tr class="info">
-                                <th>Producto</th> 
-                                <th>Variante</th> 
-                                <th>Marca</th> 
-                                <th>Disponible</th> 
-                            </tr>
-                        </thead>
-                        <tbody >
-                            <tr ng-repeat="var in almacenes.variant_warehouses">
-                                <td><a ng-click="varProdAl(var.variant.product_id)">{{ var.variant.prodName }}</a></td>
-                                <td> {{var.variant.name}} </td>
-                                <td> {{var.variant.brand}} </td>
-                                <td> {{var.stock}} </td>
-                            </tr>
-                        </tbody>
-                    </table>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-transparent">         
+                <div class="panel-body">
+                    <div class="input mb-xl">
+                        <input type="text" ng-model="filterOptions.filterText" class="form-control" placeholder="Buscar...">
+                    </div>
+
+                    <div class="panel">
+                        <div class="panel-body no-padding">
+                            <div style="height: 512px;" ng-grid="gridOptions"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
+
         </div>
     </div>
+    
 </div>
