--- a/app/views/app-vistaClientes.html
+++ b/app/views/app-vistaClientes.html
@@ -11,30 +11,23 @@
 	    	</div>
 		</div>
 	</div>
-    <div class="tab-content" >
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12 bor-tab">   
-                    <table class="table table-hover">
-                      <thead>
-                          <tr class="info">
-                            <th>Nombre</th> 
-                            <th>Correo</th> 
-                            <th>P&aacute;gina</th> 
-                            <th>Tel&eacute;fono</th> 
-                            <th>Precio</th>
-                          </tr>
-                      </thead>
-                      <tr ng-repeat="cliente in clientesTods">
-                          <td><a href="#/app-vistaClienteInd/{{ cliente.id }}">{{ cliente.name }}</a></td>
-                          <td>{{ cliente.email }}</td>
-                          <td>{{ cliente.website }}</td>
-                          <td>{{ cliente.phone }}</td>
-                          <td>{{ cliente.price.name }}</td>
-                      </tr>
-                  </table>
+  <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-transparent">         
+                <div class="panel-body">
+                    <div class="input mb-xl">
+                        <input type="text" ng-model="filterOptions.filterText" class="form-control" placeholder="Buscar...">
+                    </div>
+
+                    <div class="panel">
+                        <div class="panel-body no-padding">
+                            <div style="height: 512px;" ng-grid="gridOptions"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
+
         </div>
     </div>
+    
 </div>	
