--- a/app/views/app-vistaOrdenCInd.html
+++ b/app/views/app-vistaOrdenCInd.html
@@ -24,7 +24,7 @@ hr{    border-top-color: #455A64}
     <h1>&Oacute;rden de compra : {{ordenCompra.number}}</h1>
     <div class="options">
         <div class="btn-toolbar">
-            <a ng-click="changePayment()" ng-show="ordenVenta.payment=='Pendiente'" class="btn btn-default"><i class="fa fa-fw fa-send"></i>Pagada</a>
+            <a ng-click="cargarOrden()" ng-show="ordenCompra.status=='Solicitado'" class="btn btn-default"><i class="fa fa-fw fa-send"></i>Cargar Orden</a>
         </div>
     </div>
   </div>
