--- a/app/views/app-vistaOrdenesVenta.html
+++ b/app/views/app-vistaOrdenesVenta.html
@@ -12,33 +12,23 @@
             </div>
         </div>
     </div>
-    <div class="tab-content" >
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12">   
-                    <table class="table table-hover">
-                        <thead>
-                            <tr class="info">
-                                <th>&Oacute;rden de venta</th> 
-                                <th>Cliente</th> 
-                                <th>Estado</th> 
-                                <th>Pago</th> 
-                                <th>Monto</th> 
-                            </tr>
-                        </thead>
-                        <tbody >
-                            <tr ng-repeat="order in ordenesVenta">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-transparent">         
+                <div class="panel-body">
+                    <div class="input mb-xl">
+                        <input type="text" ng-model="filterOptions.filterText" class="form-control" placeholder="Buscar...">
+                    </div>
 
-                                <td><a href="#/app-vistaOrdenVInd/{{order.id}}">{{order.number}}</a></td>
-                                <td>{{order.client.name}}</td>
-                                <td>{{order.status}}</td>
-                                <td>{{order.payment}}</td>
-                                <td>${{order.amount}}</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="panel">
+                        <div class="panel-body no-padding">
+                            <div style="height: 512px;" ng-grid="gridOptions"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
+
         </div>
     </div>
+    
 </div>
