--- a/app/views/app-vistaPrestamos.html
+++ b/app/views/app-vistaPrestamos.html
@@ -16,30 +16,23 @@
             </div>
         </div>
     </div>
-    <div class="tab-content" >
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12">   
-                    <table class="table table-hover">
-                        <thead>
-                            <tr class="info">
-                                <th>Folio</th> 
-                                <th>Prestamista</th> 
-                                <th>Prestatario</th> 
-                                <th>Estado</th> 
-                            </tr>
-                        </thead>
-                        <tbody >
-                            <tr ng-repeat="pres in prestamos">
-                                <td><a href="#/app-vistaLoanInd/{{pres.id}}">{{pres.number}}</a></td>
-                                <td>{{pres.origin.warehouse.location_name}} - {{pres.origin.warehouse.name}} - {{pres.origin.name}}</td>
-                                <td>{{pres.borrower}}</td>
-                                <td>{{pres.status}}</td>
-                            </tr>
-                        </tbody>
-                    </table>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-transparent">         
+                <div class="panel-body">
+                    <div class="input mb-xl">
+                        <input type="text" ng-model="filterOptions.filterText" class="form-control" placeholder="Buscar...">
+                    </div>
+
+                    <div class="panel">
+                        <div class="panel-body no-padding">
+                            <div style="height: 512px;" ng-grid="gridOptions"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
+
         </div>
     </div>
+    
 </div>
