--- a/app/views/tables-data.html
+++ b/app/views/tables-data.html
@@ -9,7 +9,7 @@
     <div class="row">
       <div class="col-md-12">
       
-            <!-- <panel panel-class="panel-primary" data-heading="Table With Pagination and Async Data">
+             <panel panel-class="panel-primary" data-heading="Table With Pagination and Async Data">
                 <alert>This is an advanced demonstration of ngGrid's remote data and pagination capabilities. Please check <a target="_blank" href="http://angular-ui.github.io/ng-grid/">the official docs</a> for more information.</alert>
 
                 <div class="input mb-md">
@@ -18,7 +18,7 @@
 
                 <div style="height: 400px;" ng-grid="gridOptions"></div>
 
-            </panel> -->
+            </panel> 
 
             <div class="panel panel-transparent">
                 <div class="panel-heading">
