Pruebas para user

--- a/app/views/app-vistaProductos.html
+++ b/app/views/app-vistaProductos.html
@@ -7,7 +7,7 @@
         <h1>Productos</h1>
         <div class="options">
             <div class="btn-toolbar">
-
+                <a ng-click="deleteCustomer()">Ejemplo modal</a>
                 <a href="#/app-nuevoProducto" class="btn btn-default"><i class="fa fa-fw fa-plus"></i>Agregar Producto</a>
             </div>
         </div>
