--- a/app/views/login.html
+++ b/app/views/login.html
@@ -8,7 +8,7 @@
           </div>
           <div class="panel-body"> 
             
-            <!--<form ng-submit="createLog()" class="form-horizontal" id="validate-form">
+            <form ng-submit="createLog()" class="form-horizontal" id="validate-form">
               <div class="form-group">
                             <div class="col-xs-12">
                               <div class="input-group">
@@ -36,8 +36,8 @@
                 <input type="submit" class="btn btn-primary pull-right" value="Entrar" style="background-color:#93351F;border-color:#93351F;">
               </div>
             </div>
-            </form>-->
-            <form ng-submit="submitLogin(loginForm)" role="form" ng-init="loginForm = {}">
+            </form>
+            <!--<form ng-submit="submitLogin(loginForm)" role="form" ng-init="loginForm = {}">
               <div class="form-group">
                 <label>email</label>
                 <input type="email" name="email" ng-model="loginForm.email" required="required" class="form-control"/>
@@ -49,7 +49,7 @@
               </div>
 
               <button type="submit" class="btn btn-primary btn-lg">Sign in</button>
-            </form>
+            </form>-->
           </div>
         </div>
       </div>
