modales de confirmacion

--- a/app/views/modalTemplate2.html
+++ b/app/views/modalTemplate2.html
@@ -7,5 +7,5 @@
 <div class="modal-footer">
   <button type="button" class="btn" 
           data-ng-click="modalOptions.close()">{{modalOptions.closeButtonText}}</button>
-  <button class="btn btn-primary" style="background-color:#93351F;border-color:#93351F;" data-ng-click="modalOptions.ok();">{{modalOptions.actionButtonText}}</button>
+  <button class="btn btn-primary" style="background-color:#93351F;border-color:#93351F;" data-ng-click="modalOptions.close();">{{modalOptions.actionButtonText}}</button>
 </div>
