--- a/app/views/login.html
+++ b/app/views/login.html
@@ -37,7 +37,7 @@
               </div>
             </div>
             </form>-->
-            <form ng-submit="submitLogin(loginForm)" role="form" ng-init="loginForm = {}">
+            <form ng-submit="handleLoginBtnClick(loginForm)" role="form" ng-init="loginForm = {}">
               <div class="form-group">
                 <label>email</label>
                 <input type="email" name="email" ng-model="loginForm.email" required="required" class="form-control"/>
