--- a/app/views/app-vistaOrdenesCompra.html
+++ b/app/views/app-vistaOrdenesCompra.html
@@ -13,6 +13,7 @@
             </div>
         </div>
     </div>
+    {{muestra}}
     <div class="row">
         <div class="col-md-12">
             <div class="panel panel-transparent">         
