--- a/app/views/app-vistaProductos.html
+++ b/app/views/app-vistaProductos.html
@@ -25,7 +25,7 @@
                                 <th>Variantes</th> 
                             </tr>
                         </thead>
-                        <tr ng-repeat=" prod in productos | filter:searchText | filter:{status:'D'}" >
+                        <tr ng-repeat=" prod in productos | filter:{name: searchText} |filter:{brand.name: searchText} | filter:{status:'D'}" >
                             <td><a href="#/app-vistaProductoInd/{{prod.id}}">{{ prod.name }}</a></td>
                             <td>{{ prod.brand.name }}</td>
                             <td>{{prod.variants.length}}</td>
