--- a/app/views/app-vistaMarcas.html
+++ b/app/views/app-vistaMarcas.html
@@ -12,7 +12,28 @@
 	    	</div>
 		</div>
 	</div>
-	<div class="row">
+    <div class="tab-content">
+        <div class="container-fluid">
+            <div class="row">
+                <label>Buscar: <input ng-model="searchText"></label>
+                <table class="table table-hover">
+                    <thead>
+                        <tr class="info">
+                            <th>Marca</th>  
+                            <th></th> 
+                            <th></th> 
+                        </tr>
+                    </thead>
+                    <tr ng-repeat="marcaP in marcasProxy.data | filter:{name: searchText}| filter:{status:'D'}" >
+                        <td>{{ marcaP.name }}</td>
+                        <td><a href="#/app-editarMarcas/{{ marcaP.id }}">Editar</a></td>
+                        <td><a ng-click="removeTest(marcaP.id)">Eliminar</a></td>
+                    </tr>
+                </table> 
+            </div>
+        </div>
+    </div>
+	<!--<div class="row">
         <div class="col-md-12">
             <div class="panel panel-transparent">         
                 <div class="panel-body">
@@ -29,5 +50,5 @@
             </div>
 
         </div>
-    </div>
+    </div>-->
 </div>	
