--- a/app/views/login.html
+++ b/app/views/login.html
@@ -7,15 +7,15 @@
             <h2>Iniciar sesion</h2>
           </div>
           <div class="panel-body"> 
-            
-            <!--<form ng-submit="createLog()" class="form-horizontal" id="validate-form">
+            <span class="label label-warning" ng-hide="ErrorLog">Usuario o contrase&ntilde;a incorrectos</span>
+            <form ng-submit="handleLoginBtnClick(loginForm)" role="form" ng-init="loginForm = {}" class="form-horizontal" id="validate-form">
               <div class="form-group">
                             <div class="col-xs-12">
                               <div class="input-group">
                     <span class="input-group-addon">
                       <i class="fa fa-user"></i>
                     </span>
-                    <input type="text" ng-model="us" class="form-control" placeholder="Usuario" data-parsley-minlength="6" placeholder="At least 6 characters" required>
+                    <input type="email" ng-model="loginForm.email" required="required" class="form-control" placeholder="Usuario" data-parsley-minlength="6" placeholder="At least 6 characters">
                   </div>
                             </div>
               </div>
@@ -26,7 +26,7 @@
                     <span class="input-group-addon">
                       <i class="fa fa-key"></i>
                     </span>
-                    <input ng-model="pass" type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
+                    <input ng-model="loginForm.password" required="required"  type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
                   </div>
                             </div>
               </div>
@@ -36,19 +36,6 @@
                 <input type="submit" class="btn btn-primary pull-right" value="Entrar" style="background-color:#93351F;border-color:#93351F;">
               </div>
             </div>
-            </form>-->
-            <form ng-submit="handleLoginBtnClick(loginForm)" role="form" ng-init="loginForm = {}">
-              <div class="form-group">
-                <label>email</label>
-                <input type="email" name="email" ng-model="loginForm.email" required="required" class="form-control"/>
-              </div>
-
-              <div class="form-group">
-                <label>password</label>
-                <input type="password" name="password" ng-model="loginForm.password" required="required" class="form-control"/>
-              </div>
-
-              <button type="submit" class="btn btn-primary btn-lg">Sign in</button>
             </form>
           </div>
         </div>
