Tablas con filtros y no muestra los que estan archivados

--- a/app/views/app-vistaProveedorInd.html
+++ b/app/views/app-vistaProveedorInd.html
@@ -14,7 +14,7 @@
 		<div class="options">
 	    	<div class="btn-toolbar">
 	        	<a href="#/app-editarProveedor/{{ suppUProxy.id }}" class="btn btn-default"><i class="fa fa-fw fa-pencil"></i>Editar</a>
-                <a ng-click="archivarProveedor()" class="btn btn-default"><i class="fa fa-fw fa-trash"></i>Archivar</a>
+                <a ng-click="removeTest()" class="btn btn-default"><i class="fa fa-fw fa-trash"></i>Archivar</a>
 	    	</div>
 		</div>
 	</div>
